--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ header {
     color: #000;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 300;
+    font-weight: 200;
     padding-left: 10px;
     padding-right: 10px;
     height: 100px;
@@ -42,10 +42,10 @@ header {
 .menu li a:hover,
 .menu .active a {
     border-bottom: 5px solid #00f4;
-    font-weight: 900;
+    font-weight: 600;
+    cursor: pointer;
 }
 .banner {
-    background-color:#333;
     height: calc(100vh - 100px);
     background-image: url('/assets/images/laranja\ azul\ recorte.png');
     background-size: cover;
@@ -85,7 +85,7 @@ header {
 }
 .imagens {
     max-width: 1140px;
-    margin-top: 45%;
+    margin-top: 3%;
     display: flex;
     align-items: center;
     padding-left: 15%;
@@ -125,6 +125,7 @@ header {
 }
 .photo:hover .about{
     display: flex;
+    cursor: pointer;
 }
 
 .pe {
@@ -142,4 +143,130 @@ header {
     width: 20px;
     height: 20px;
 
+}
+@media (max-width: 1024px)
+{
+    .header {
+        max-width: 1024px;
+        height: 100px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .logo {
+        padding-left: 10px;
+    }
+    .menu {
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .menu ul, .menu li {
+        list-style: none;
+    }
+    .menu ul{
+        display: flex;
+    }
+    .menu li a {
+        color: #000;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: 200;
+        padding-left: 5px;
+        padding-right: 8px;
+        height: 100px;
+        display: flex;
+        align-items: center;
+    }
+    .menu li a:hover,
+    .menu .active a {
+        border-bottom: 5px solid #00f4;
+        font-weight: 600;
+        cursor: pointer;
+    }
+    .banner {
+        height: calc(100vh - 100px);
+        background-image: url('/assets/images/laranja\ azul\ recorte.png');
+        background-size: cover;
+        background-position: bottom;
+        overflow: hidden;
+    }
+    .banner .sliders {
+        width:300vw;
+        height: 100%;
+    
+    }
+    
+    .banner .slide {
+        width: 100vw;
+        height: 100%;
+    }
+    .banner .slidearea {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        height: 100%;
+        color: #fff;
+        margin-left: 100px;
+        text-decoration: none;
+    }
+    .banner h1 {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 50px;
+    }
+    .banner p{
+        text-transform: uppercase;
+        margin-top: 70px;
+        font-size: 35px;
+        color: #fff;
+    }
+    .imagens {
+        max-width: 1024px;
+        margin-top: 3%;
+        display: flex;
+        align-items: center;
+        padding-left: 5%;
+        margin-right: 40px;
+    }
+    .container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .container .photo img{
+        width: 220px;
+        height: 230px;  
+    }
+    .container .photo {
+        margin: 5px;
+    }
+    .photo .about {
+        position: absolute;
+        background-color: rgb(0, 0, 0, 0.8);
+        width: 220px;
+        height: 230px;
+        color: #fff;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .photo .about h5 {
+        font-size: 40px;
+        text-align: center;
+    }
+    .photo .about p {
+        font-size: 25px;
+        text-align: center;
+    }
+    .photo:hover .about{
+        display: flex;
+        cursor: pointer;
+    }
+    
 }
